--- a/refs.bib
+++ b/refs.bib
@@ -1,246 +1,141 @@
-@unpublished{Elliott2025FiniteEC,
-  author       = {Elliott, Jacob Alexander},
-  title        = {Ergodic Metric Drift as a Path-Validity Engine: Finite Graphs},
-  note         = {Manuscript, August 13, 2025},
-  year         = {2025}
+@unpublished{elliott2025qfi,
+  title   = {The Quotient Flow Invariant},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@unpublished{Elliott2025ModalShell,
-  author       = {Elliott, Jacob Alexander},
-  title        = {A Modal Shell for Drift, Idiom Necessity, and Invariant Transport},
-  note         = {Manuscript, August 13, 2025},
-  year         = {2025}
+@unpublished{elliott2025idiom,
+  title   = {Idiom Projections on Finite Paths and Fisher--Information Transport},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@unpublished{QFI,
-  author       = {Elliott, Jacob Alexander},
-  title        = {The Quotient Flow Invariant},
-  note         = {Manuscript, 2025},
-  year         = {2025}
+@unpublished{elliott2025flow,
+  title   = {Measure-Theoretic Flow Centrality},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@book{Kelly1982,
-  author       = {Kelly, G. Max},
-  title        = {Basic Concepts of Enriched Category Theory},
-  series       = {London Mathematical Society Lecture Note Series},
-  volume       = {64},
-  publisher    = {Cambridge University Press},
-  address      = {Cambridge, UK},
-  year         = {1982},
-  note         = {Reprinted in \textit{Reprints in Theory and Applications of Categories}, No.~10 (2005), pp. vi+137},
-  url          = {http://www.tac.mta.ca/tac/reprints/articles/10/tr10.pdf}
+@unpublished{elliott2025drift,
+  title   = {Ergodic Metric Drift as a Path--Validity Engine: Finite Graphs},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@article{Fisher1922,
-  author       = {Fisher, Ronald A.},
-  title        = {On the mathematical foundations of theoretical statistics},
-  journal      = {Philosophical Transactions of the Royal Society of London, Series A},
-  volume       = {222},
-  number       = {594--604},
-  pages        = {309--368},
-  year         = {1922},
-  doi          = {10.1098/rsta.1922.0009}
+@unpublished{elliott2025pmb,
+  title   = {Parallel Murphy Budgeting for Experimental Design},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@article{Neyman1935,
-  author       = {Neyman, Jerzy},
-  title        = {On a theorem concerning the Chebyshev–Markoff chains},
-  journal      = {Annals of Mathematical Statistics},
-  volume       = {6},
-  number       = {3},
-  pages        = {123--150},
-  year         = {1935}
+@unpublished{elliott2025ki,
+  title   = {Kantian Inevitability: Canonical Forms Under Shared Constraints (KI-{\Delta}2)},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@article{Pitman1936,
-  author       = {Pitman, Edwin J. G.},
-  title        = {Sufficient statistics and intrinsic accuracy},
-  journal      = {Mathematical Proceedings of the Cambridge Philosophical Society},
-  volume       = {32},
-  number       = {4},
-  pages        = {567--579},
-  year         = {1936}
+@unpublished{elliott2025contracts,
+  title   = {Measure-Theoretic Compile-Time Safety Contracts for Decision Kernels},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@article{Koopman1936,
-  author       = {Koopman, Bernard Osgood},
-  title        = {On distributions admitting a sufficient statistic},
-  journal      = {Transactions of the American Mathematical Society},
-  volume       = {39},
-  number       = {3},
-  pages        = {399--409},
-  year         = {1936},
-  doi          = {10.1090/S0002-9947-1936-1501854-3}
+@unpublished{elliott2025graded,
+  title   = {A Typed, Contract-Indexed, Graded Effect Calculus for Safe Composition},
+  author  = {Elliott, Jacob Alexander},
+  year    = {2025},
+  note    = {Manuscript}
 }
 
-@article{Darmois1935,
-  author       = {Darmois, Georges},
-  title        = {Sur les lois de probabilit{\'e} \`a estimation exhaustive},
-  journal      = {Comptes Rendus de l'Acad{\'e}mie des Sciences, Paris},
-  volume       = {200},
-  pages        = {1265--1266},
-  year         = {1935}
+@book{CoverThomas2006,
+  author    = {Cover, Thomas M. and Thomas, Joy A.},
+  title     = {Elements of Information Theory},
+  edition   = {2},
+  year      = {2006},
+  publisher = {Wiley}
 }
 
-@book{Cover2006,
-  author       = {Cover, Thomas M. and Thomas, Joy A.},
-  title        = {Elements of Information Theory},
-  edition      = {2nd},
-  publisher    = {Wiley-Interscience},
-  address      = {Hoboken, NJ},
-  year         = {2006},
-  isbn         = {978-0471241959}
-}
-
-@book{Helstrom1976,
-  author       = {Helstrom, Carl W.},
-  title        = {Quantum Detection and Estimation Theory},
-  series       = {Mathematics in Science and Engineering},
-  volume       = {123},
-  publisher    = {Academic Press},
-  address      = {New York},
-  year         = {1976}
-}
-
-@article{Braunstein1994,
-  author       = {Braunstein, Samuel L. and Caves, Carlton M.},
-  title        = {Statistical distance and the geometry of quantum states},
-  journal      = {Physical Review Letters},
-  volume       = {72},
-  number       = {22},
-  pages        = {3439--3443},
-  year         = {1994},
-  doi          = {10.1103/PhysRevLett.72.3439}
-}
-
-@book{Holevo2019,
-  author       = {Holevo, Alexander S.},
-  title        = {Quantum Systems, Channels, Information: A Mathematical Introduction},
-  edition      = {2nd},
-  publisher    = {de Gruyter},
-  address      = {Berlin},
-  year         = {2019},
-  doi          = {10.1515/9783110642490}
-}
-
-@incollection{Giry1982,
-  author       = {Giry, Mich{\`e}le},
-  title        = {A categorical approach to probability theory},
-  editor       = {Banaschewski, B.},
-  booktitle    = {Categorical Aspects of Topology and Analysis (Ottawa, 1980)},
-  series       = {Lecture Notes in Mathematics},
-  volume       = {915},
-  pages        = {68--85},
-  publisher    = {Springer},
-  address      = {Berlin},
-  year         = {1982},
-  doi          = {10.1007/BFb0092872}
-}
-
-@article{Fritz2020,
-  author       = {Fritz, Tobias},
-  title        = {A synthetic approach to Markov kernels, conditional independence and theorems on sufficient statistics},
-  journal      = {Advances in Mathematics},
-  volume       = {370},
-  pages        = {107239},
-  year         = {2020},
-  doi          = {10.1016/j.aim.2020.107239}
-}
-
-@article{Petz1986,
-  author       = {Petz, D{\'e}nes},
-  title        = {Sufficient subalgebras and the relative entropy of states of a von Neumann algebra},
-  journal      = {Communications in Mathematical Physics},
-  volume       = {105},
-  pages        = {123--131},
-  year         = {1986},
-  doi          = {10.1007/BF01212345}
-}
-
-@article{Paris2009,
-  author       = {Paris, Matteo G. A.},
-  title        = {Quantum estimation for quantum technology},
-  journal      = {International Journal of Quantum Information},
-  volume       = {7},
-  number       = {Supplement 1},
-  pages        = {125--137},
-  year         = {2009},
-  doi          = {10.1142/S0219749909004839}
-}
-
-@book{Csiszar2011,
-  author       = {Csisz{\'a}r, Imre and K{\"o}rner, J{\'a}nos},
-  title        = {Information Theory: Coding Theorems for Discrete Memoryless Systems},
-  edition      = {2nd},
-  publisher    = {Cambridge University Press},
-  address      = {Cambridge, UK},
-  year         = {2011},
-  isbn         = {978-0521196819}
-}
-
-% ----- added foundational references -----
 @book{AmariNagaoka2000,
   author    = {Amari, Shun-ichi and Nagaoka, Hiroshi},
   title     = {Methods of Information Geometry},
-  series    = {Translations of Mathematical Monographs},
-  volume    = {191},
-  publisher = {American Mathematical Society},
-  address   = {Providence, RI},
-  year      = {2000}
+  year      = {2000},
+  publisher = {American Mathematical Society}
 }
 
-@book{Cencov1981,
+@book{Cencov1982,
   author    = {Cencov, N. N.},
   title     = {Statistical Decision Rules and Optimal Inference},
-  series    = {Translations of Mathematical Monographs},
-  volume    = {53},
-  publisher = {American Mathematical Society},
-  address   = {Providence, RI},
-  year      = {1981}
+  year      = {1982},
+  publisher = {American Mathematical Society}
 }
 
-@book{Cramer1946,
-  author    = {Cram{\'e}r, Harald},
-  title     = {Mathematical Methods of Statistics},
-  publisher = {Princeton University Press},
-  address   = {Princeton, NJ},
-  year      = {1946}
+@article{Blackwell1953,
+  author  = {Blackwell, David},
+  title   = {Equivalent Comparisons of Experiments},
+  journal = {The Annals of Mathematical Statistics},
+  year    = {1953},
+  volume  = {24},
+  number  = {2},
+  pages   = {265--272}
 }
 
-@article{Rao1945,
-  author  = {Rao, C. R.},
-  title   = {Information and the Accuracy Attainable in the Estimation of Statistical Parameters},
-  journal = {Bulletin of the Calcutta Mathematical Society},
-  volume  = {37},
-  number  = {3},
-  pages   = {81--91},
-  year    = {1945}
+@article{Petz1986,
+  author  = {Petz, D{\'e}nes},
+  title   = {Sufficient Subalgebras and the Relative Entropy of States of a von Neumann Algebra},
+  journal = {Communications in Mathematical Physics},
+  year    = {1986},
+  volume  = {105},
+  pages   = {123--131}
 }
 
-@book{LeCam1986,
-  author    = {Le Cam, Lucien},
-  title     = {Asymptotic Methods in Statistical Decision Theory},
-  series    = {Springer Series in Statistics},
-  publisher = {Springer},
-  address   = {New York},
-  year      = {1986}
+@article{Petz1996,
+  author  = {Petz, D{\'e}nes},
+  title   = {Monotone Metrics on Matrix Spaces},
+  journal = {Linear Algebra and its Applications},
+  year    = {1996},
+  volume  = {244},
+  pages   = {81--96}
 }
 
-@book{VanTrees1968,
-  author    = {Van Trees, Harry L.},
-  title     = {Detection, Estimation, and Modulation Theory, Part I},
-  publisher = {Wiley},
-  address   = {New York},
-  year      = {1968}
+@book{DemboZeitouni1998,
+  author    = {Dembo, Amir and Zeitouni, Ofer},
+  title     = {Large Deviations Techniques and Applications},
+  edition   = {2},
+  year      = {1998},
+  publisher = {Springer}
 }
 
-@inproceedings{Blackwell1951,
-  author    = {Blackwell, David},
-  title     = {Comparison of Experiments},
-  booktitle = {Proceedings of the Second Berkeley Symposium on Mathematical Statistics and Probability},
-  editor    = {Neyman, Jerzy},
-  pages     = {93--102},
-  publisher = {University of California Press},
-  address   = {Berkeley},
-  year      = {1951}
+@book{MeynTweedie2009,
+  author    = {Meyn, Sean P. and Tweedie, Richard L.},
+  title     = {Markov Chains and Stochastic Stability},
+  edition   = {2},
+  year      = {2009},
+  publisher = {Cambridge University Press}
+}
+
+@article{KochenStone1964,
+  author  = {Kochen, Simon and Stone, Charles J.},
+  title   = {A Note on the Borel--Cantelli Lemma},
+  journal = {Illinois Journal of Mathematics},
+  year    = {1964},
+  volume  = {8},
+  number  = {2},
+  pages   = {248--251}
+}
+
+@article{Freedman1975,
+  author  = {Freedman, David A.},
+  title   = {On Tail Probabilities for Martingales},
+  journal = {The Annals of Probability},
+  year    = {1975},
+  volume  = {3},
+  number  = {1},
+  pages   = {100--118}
 }
